# OpenCV_cpp_and_python

./: .gitignore  CMakeLists.txt  README.md
src/AgeGender/: AgeGender.cpp  AgeGender.py  CMakeLists.txt
src/AlphaBlending/: CMakeLists.txt  alphaBlend.cpp
src/AugmentedRealityWithArucoMarkers/: CMakeLists.txt  augmented_reality_with_aruco.cpp  augmented_reality_with_aruco.py  generate_aruco_markers.cpp
src/BackgroundEstimation/: CMakeLists.txt  OpenCV_BackgroundEstimation.cpp  OpenCV_BackgroundEstimation.py
src/BackgroundSubtraction/: CMakeLists.txt  background_subtr_opencv.cpp
src/Barcode-QRcodeScanner/: CMakeLists.txt  barcode-QRcodeScanner.cpp  barcode-QRcodeScannerPy2.py
src/BlobDetector/: CMakeLists.txt  blob.cpp
src/Building_an_eye_tracker_with_openCV/: CMakeLists.txt
src/Building_an_eye_tracker_with_openCV/include/: KeyPointDetector.h
src/Building_an_eye_tracker_with_openCV/src/: FaceDetector.cpp  KeyPointDetector.cpp  main.cpp
src/CameraCalibration/: CMakeLists.txt  cameraCalibration.cpp  cameraCalibrationWithUndistortion.cpp
src/CenterofBlob/: CMakeLists.txt  center_of_multipe_blob.cpp  center_of_multiple_blob.py  single_blob.cpp  single_blob.py
src/ColorSpaces/: CMakeLists.txt  interactiveColorDetect.cpp  interactiveColorSegment.cpp
src/Colorization/: CMakeLists.txt  ImageColorization.cpp  ImageColorization.py  VideoColorization.cpp  VideoColorization.py
src/Colormap/: CMakeLists.txt  colormap.cpp  custom_colormap.cpp
src/Contour-Detection-using-OpenCV/: CMakeLists.txt
src/Contour-Detection-using-OpenCV/cpp/: channel_experiments.cpp  contour_approx.cpp  contour_extraction.cpp
src/ConvexHull/: CMakeLists.txt  example.cpp
src/Deep-Learning-with-DNN-Module/: CMakeLists.txt
src/Deep-Learning-with-DNN-Module/cpp/: classify.cpp  detect_img.cpp  detect_vid.cpp
src/Delaunay/: CMakeLists.txt  delaunay.cpp
src/ECCAlignment/: CMakeLists.txt  OpenCV_ECCAlignment.cpp  OpenCV_ECCAlignment_example.cpp
src/EigenFace/: CMakeLists.txt  EigenFace.cpp
src/EpipolarGeometryAndStereoVision/: CMakeLists.txt  stereo.cpp
src/ExposureFusion/: CMakeLists.txt  exposureFusion.cpp
src/FaceAverage/: CMakeLists.txt  faceAverage.cpp
src/FaceMorph/: CMakeLists.txt  faceMorph.cpp
src/FaceSwap/: CMakeLists.txt  faceSwap.cpp
src/FacialLandmarkDetection/: CMakeLists.txt  drawLandmarks.hpp  facialLandmarkDetection.cpp  renderFace.hpp
src/FillHoles/: CMakeLists.txt  OpenCV_FillHoles.cpp
src/HDR/: CMakeLists.txt  hdr.cpp
src/HandPose/: CMakeLists.txt  handPoseImage.cpp  handPoseVideo.cpp
src/HeadPose/: CMakeLists.txt  headPose.cpp
src/Homography/: CMakeLists.txt  homography.cpp  homography2.cpp  perspective-correction.cpp  virtual-billboard.cpp
src/HoughTransform/: CMakeLists.txt  hough_circles.cpp  hough_lines.cpp
src/HuMoments/: CMakeLists.txt  HuMoments.cpp  shapeMatcher.cpp
src/Image-Inpainting/: CMakeLists.txt  inpaint.cpp
src/ImageAlignment/: CMakeLists.txt  image_alignment.cpp  image_alignment_simple_example.cpp
src/ImageAlignment-FeatureBased/: CMakeLists.txt  align.cpp
src/ImageQuality/: CMakeLists.txt  OpenCV_ImageQuality.cpp
src/ImageSuperres/: CMakeLists.txt  dnn_superres.cpp  dnn_superres_benchmark_quality.cpp  dnn_superres_benchmark_time.cpp  dnn_superres_multioutput.cpp  dnn_superres_video.cpp
src/ImgHash/: CMakeLists.txt  OpenCV_ImgHash.cpp
src/IntensityTransform/: CMakeLists.txt  OpenCV_IntensityTransform.cpp
src/NonPhotorealisticRendering/: CMakeLists.txt  npr.cpp
src/ObjectDetection-YOLO/: CMakeLists.txt  object_detection_video.cpp  yolov3_detect_img.cpp
src/Object_tracking_use_OpenCV/: CMakeLists.txt  Object_tracking.cpp
src/OpenCV_Bgsegm/: CMakeLists.txt  OpenCV_Bgsegm.cpp
src/OpenCV_cvui/: CMakeLists.txt  canny.cpp
src/OpenPose/: CMakeLists.txt  OpenPoseImage.cpp  OpenPoseVideo.cpp
src/OpenPose-Multi-Person/: CMakeLists.txt  multi-person-openpose.cpp
src/Opencv_dlib_face_detection/: CMakeLists.txt  dnn_opencv.cpp  face_detection.cpp  face_detection.h  haar_opencv.cpp
src/Photoshop-Filters-in-OpenCV/: 60s_TV.cpp  CMakeLists.txt  brightness.cpp  duo_tone.cpp  emboss.cpp  sepia.cpp
src/Polar/: CMakeLists.txt  OpenCV_Polar.cpp  OpenCV_WarpPolar.cpp
src/ReconstructFaceUsingEigenFaces/: CMakeLists.txt  createPCAModel.cpp
src/RedEyeRemover/: CMakeLists.txt  removeRedEyes.cpp
src/RotationMatrixToEulerAngles/: CMakeLists.txt  rotm2euler.cpp
src/SaliencyObject/: CMakeLists.txt  OpenCV_SaliencyObject.cpp
src/SeamlessCloning/: CMakeLists.txt  clone.cpp  laplacian_pyramid_blending.cpp  normal_versus_mixed_clone.cpp
src/SelectiveSearch/: CMakeLists.txt  ssearch.cpp
src/StereoDisparity/: CMakeLists.txt  OpenCV_StereoDisparity.cpp
src/Super-Resolution-in-OpenCV/: CMakeLists.txt  super_res.cpp
src/Threshold/: CMakeLists.txt  threshold.cpp
src/UnderstandingLensDistortion/: CMakeLists.txt  Undistort.cpp
src/VideoBackgroundEstimation/: CMakeLists.txt  removeVideoBg.cpp
src/VideoReadWriteDisplay/: CMakeLists.txt  videoRead.cpp  videoWrite.cpp
src/VideoStabilization/: CMakeLists.txt  video_stabilization.cpp
src/WarpTriangle/: CMakeLists.txt  warpTriangle.cpp  warpTriangle.py
src/digits-classification/: CMakeLists.txt  train_digits.cpp
src/forEach/: CMakeLists.txt  forEach.cpp
src/ninjaEyeDetector/: CMakeLists.txt  ninjaEyeDetector.cpp
src/otsu-method/: CMakeLists.txt  otsu_implementation.cpp  otsu_method.cpp
src/stereo-camera/: CMakeLists.txt  calibrate.cpp  capture_images.cpp  movie3d.cpp
