cmake_minimum_required(VERSION 3.18 FATAL_ERROR)

project(OpenCV_cpp_and_python  VERSION 1.0.0 LANGUAGES CXX)

# Requires OpenCV
# Requires OpenCV
FIND_PACKAGE( OpenCV 4.5.3 REQUIRED )
MESSAGE("OpenCV version : ${OpenCV_VERSION}")
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} ) 

# Add  sub-projects:
add_subdirectory("src/AgeGender")	
add_subdirectory("src/AlphaBlending")
add_subdirectory("src/AugmentedRealityWithArucoMarkers")
add_subdirectory("src/BackgroundEstimation")
add_subdirectory("src/BackgroundSubtraction")
add_subdirectory("src/Barcode-QRcodeScanner")
add_subdirectory("src/BlobDetector")
add_subdirectory("src/Building_an_eye_tracker_with_openCV")
add_subdirectory("src/CameraCalibration")
add_subdirectory("src/CenterofBlob")
add_subdirectory("src/Colorization")
add_subdirectory("src/Colormap")
add_subdirectory("src/ColorSpaces")
add_subdirectory("src/Contour-Detection-using-OpenCV")
add_subdirectory("src/ConvexHull")
add_subdirectory("src/Deep-Learning-with-DNN-Module")
add_subdirectory("src/Delaunay")
add_subdirectory("src/digits-classification")
add_subdirectory("src/ECCAlignment")
add_subdirectory("src/EigenFace")
add_subdirectory("src/EpipolarGeometryAndStereoVision")
add_subdirectory("src/ExposureFusion")
add_subdirectory("src/FaceAverage")
add_subdirectory("src/FaceMorph")
add_subdirectory("src/FaceSwap")
add_subdirectory("src/FacialLandmarkDetection")
add_subdirectory("src/FillHoles")
add_subdirectory("src/forEach")
add_subdirectory("src/HandPose")
add_subdirectory("src/HDR")
add_subdirectory("src/HeadPose")
add_subdirectory("src/Homography")
add_subdirectory("src/HoughTransform")
add_subdirectory("src/HuMoments")
add_subdirectory("src/ImageAlignment")
add_subdirectory("src/ImageAlignment-FeatureBased")
add_subdirectory("src/Image-Inpainting")
add_subdirectory("src/ImageQuality")
add_subdirectory("src/ImageSuperres")
add_subdirectory("src/ImgHash")
add_subdirectory("src/IntensityTransform")
add_subdirectory("src/ninjaEyeDetector")
add_subdirectory("src/NonPhotorealisticRendering")
add_subdirectory("src/ObjectDetection-YOLO")
add_subdirectory("src/OpenCV_Bgsegm")
add_subdirectory("src/OpenCV_cvui")
add_subdirectory("src/Opencv_dlib_face_detection")
add_subdirectory("src/OpenPose")
add_subdirectory("src/OpenPose-Multi-Person")
add_subdirectory("src/otsu-method")
add_subdirectory("src/Photoshop-Filters-in-OpenCV")
add_subdirectory("src/Polar")
add_subdirectory("src/ReconstructFaceUsingEigenFaces")
add_subdirectory("src/RedEyeRemover")
add_subdirectory("src/RotationMatrixToEulerAngles")
add_subdirectory("src/SaliencyObject")
add_subdirectory("src/SeamlessCloning")
add_subdirectory("src/SelectiveSearch")
add_subdirectory("src/Object_tracking_use_OpenCV")
add_subdirectory("src/stereo-camera")
add_subdirectory("src/StereoDisparity")
add_subdirectory("src/Super-Resolution-in-OpenCV")
add_subdirectory("src/Threshold")
add_subdirectory("src/UnderstandingLensDistortion")
add_subdirectory("src/VideoBackgroundEstimation")
add_subdirectory("src/VideoReadWriteDisplay")
add_subdirectory("src/VideoStabilization")
add_subdirectory("src/WarpTriangle")


